Fix height when the screen is too small

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,10 @@ strong {
     border-right: 1px solid #00ff88;
     position: sticky;
     top: 0;
-    height: 100vh;
+    align-self: start;
+    max-height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     text-align: center;
 }
 
